header and foot small changes

--- a/index.html
+++ b/index.html
@@ -93,14 +93,6 @@
                 class="navbar__logo"
               />
             </a>
-            <div>
-              <button class="navbar_button header__btn">
-                Mudar de loja
-                <span class="material-symbols-rounded header__btn-icon">
-                  keyboard_arrow_down
-                </span>
-              </button>
-            </div>
           </div>
           <!--Header :: center -->
           <div class="navbar__group">
@@ -830,7 +822,7 @@
                     </li>
                   </ul>
 
-                  <h5 class="footer_subtitle">Siga-nos nas Redes Sociais</h5>
+                  <h5 class="subtitle">Siga-nos nas Redes Sociais</h5>
                   <ul class="footer__links">
                     <div class="social-links">
                       <li>
